<resources>
    <string name="app_name">V-Food Application</string>
    //Login
    <string name="BTN_user">Iniciar sesión</string>
    <string name="BTN_register">Registrarse</string>
    <string name="TXT_login_user">Usuario</string>
    <string name="TXT_email">E-mail</string>
    <string name="TXT_password">Contraseña</string>
    <string name="SW_rememberuser">Recordar usuario</string>

    //Registrar Usuario
    <string name="TXT_user">Nombre de suario</string>
    <string name="TXT_name">Nombre</string>
    <string name="TXT_surname">Apellido</string>
    <string name="TXT_repeatpassword">Repetir contraseña</string>

    //Categorías
    <string name="TXT_sausages">Embutidos</string>
    <string name="TXT_seitan">Seitán</string>
    <string name="TXT_burguers">Hamburguesas</string>
    <string name="TXT_tofu">Tofu</string>
    <string name="TXT_category_name">Categoría</string>
    <string name="TXT_date">Seleccionar fecha</string>
    <string name="TXT_hour">Seleccionar hora</string>

    //Crear
    <string name="BTN_create">Crear</string>

    //Eliminar
    <string name="BTN_delete">Eliminar</string>

    //Actualizar
    <string name="BTN_update">Actualizar</string>

    //Subir imagen
    <string name="BTN_upload">Subir imagen</string>

    //Producto
    <string name="TXT_product_name">Producto</string>
    <string name="TXT_product_brand">Marca</string>
    <string name="TXT_product_price">Precio</string>

    //Validaciones
    <string name="null_field_error">Campo requerido</string>
    <string name="incorrect_user_or_password">Usuario o contraseña incorrecta</string>
    <string name="invalid_email_format">Formato de correo invalido</string>
    <string name="invalid_name_format">Ingrese solo letras</string>
</resources>